<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".details.information.InformationPagerFragment">

    <LinearLayout
        android:id="@+id/linear_phone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/quest_regular"
            android:gravity="start|center"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textColor="#00BCD4"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_price"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/quest_regular"
            android:gravity="start|center"
            android:text="@string/prices"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/quest_regular"
            android:gravity="start|center"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_status"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/quest_regular"
            android:gravity="start|center"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/quest_regular"
            android:gravity="start|center"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/information_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:visibility="invisible" />
</LinearLayout>